...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <ToggleButton
            android:id="@+id/btnEditMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:textSize="11sp"
...
            android:textColor="@android:color/white"
            android:textOn="Редактирование: ВКЛ"
            android:textOff="Редактирование: ВЫКЛ"
            style="@style/Widget.App.ToggleButton"/>

        <ToggleButton
            android:id="@+id/btnPersonalMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:textSize="11sp"
...
