...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_background"
                android:soundEffectsEnabled="false"
                app:iconifiedByDefault="false"
                app:queryHint="Поиск"
...
        android:layout_height="0dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarSize="0dp"
            android:clipToPadding="false"
            app:fastScrollEnabled="true"
...
